# Data-Mining-Coursework

./: .gitignore  README.md  devenv.nix  pyproject.toml
Assignment_1/: main.py  main.typ  refs.bib
Assignment_2/: main.py  main.typ  refs.bib
